manifests/cluster/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stateful
---
apiVersion: v1
kind: Namespace
metadata:
  name: compute
